Fixed a weird gradient effect on Safari
It seems that Safari doesn't recognize the keyword 'transparent'. Instead, an explict rgba value needs to be specified.

 * https://stackoverflow.com/a/27118826
 * https://developer.apple.com/library/content/documentation/InternetWeb/Conceptual/SafariVisualEffectsProgGuide/Gradients/Gradient.html

--- a/desktop/apps/gallery_partnerships/stylesheets/index.styl
+++ b/desktop/apps/gallery_partnerships/stylesheets/index.styl
@@ -423,7 +423,7 @@ background-size-cover()
         left 0
         width 10px
         height 100%
-        background linear-gradient(to right, #f8f8f8, transparent)
+        background linear-gradient(to right, rgba(248,248,248,1), rgba(248,248,248,0))
         pointer-events none
       &:after
         z-index 1000
@@ -433,7 +433,7 @@ background-size-cover()
         right 0
         width 10px
         height 100%
-        background linear-gradient(to left, #f8f8f8, transparent)
+        background linear-gradient(to left, rgba(248,248,248,1), rgba(248,248,248,0))
         pointer-events none
 
   .mgr-dot
